--- a/src/index.html
+++ b/src/index.html
@@ -9,36 +9,17 @@
   <script type="module" src="./index.js"></script>
 </head>
 
-<body>
+<body class="bg-image">
   <form class="search-form" id="search-form">
     <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-    <button type="submit">Search</button>
+    <button type="submit" class="border-button">Search</button>
   </form>
 
   <div class="gallery">
     <!-- Карточки изображений -->
   </div>
 
-  <button type="button" class="load-more">Load more</button>
+  <button type="button" class="load-more border-button is-hidden">Load more</button>
 </body>
 
 </html>
-
-
-<!-- <div class="photo-card">
-  <img src="" alt="" loading="lazy" />
-  <div class="info">
-    <p class="info-item">
-      <b>Likes</b>
-    </p>
-    <p class="info-item">
-      <b>Views</b>
-    </p>
-    <p class="info-item">
-      <b>Comments</b>
-    </p>
-    <p class="info-item">
-      <b>Downloads</b>
-    </p>
-  </div>
-</div> -->
