--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <!-- Карточки изображений -->
   </div>
 
-  <button type="button" class="load-more border-button is-hidden">Load more</button>
+  <div id="sentinel"></div>
 </body>
 
 </html>
